--- a/perf-demo/src/main/resources/application.properties
+++ b/perf-demo/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+spring.datasource.url=jdbc:mysql://localhost:9501/perfDB
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.generate_statistics=true
+
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
