--- a/perf-demo/src/main/resources/application.properties
+++ b/perf-demo/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:9501/perfDB
 spring.datasource.username=admin
 spring.datasource.password=admin
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.properties.hibernate.generate_statistics=true
 
