--- a/perf-demo/src/main/resources/application.properties
+++ b/perf-demo/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
+
+
+perfdemo.webapiserver.url=http://localhost:9510/fibonacci/
